# stardew-tree-sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  environment.yml
code/: aniamte_v1.py  animate_v1.py  cell.py  plot_v1.py  sim_v1.py
code/scripts/: growth_time_markov_chain.py
scripts/: visualization.py
tree_sim/: main.cpp
